--- a/3.html
+++ b/3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernando_pagina</title>
+    <title>Document</title>
 </head>
 <body>
     <ul class="menu">
@@ -12,6 +12,7 @@
         <li><a href="2.html">About</a></li>
         <li><a href="3.html">Dashboard</a></li>
 <hr>
+        <h2>Dashboard</h2>
     </ul>
     
 </body>
