--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="2.html">About</a></li>
         <li><a href="3.html">Dashboard</a></li>
 <hr>
+        <h2>Home</h2>
     </ul>
     
 </body>
