--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul class="menu">
-        <li><a href="1.html">Home</a></li>
-        <li><a href="2.html">About</a></li>
-        <li><a href="3.html">Dashboard</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
 <hr>
         <h2>About</h2>
     </ul>
